project technologies alignment fix

--- a/src/app/views/projects/projects.component.scss
+++ b/src/app/views/projects/projects.component.scss
@@ -88,7 +88,7 @@ app-timeline-content {
 :host::ng-deep {
     .left {
         app-project-card {
-            .mat-chip-listbox-wrapper {
+            .mdc-evolution-chip-set__chips {
                 justify-content: flex-end;
             }
         }
